tests/golden/type_errors/generic_struct_wrong_arity.cd
struct Box<T> { value: T }

let value: Box = Box { value: 1 };
