tests/golden/type_errors/generic_struct_wrong_arity.err
Type error at 3:12: struct `Box` expects 1 type arguments but got 0
  let value: Box = Box { value: 1 };
             ^
